Version 0.1.7: bug fixes for displaying week numbers in other years, bug fix of new tasks assigned from 2019 year. Added active year display. Improved UI of the chart (margins on small screens), now chart shows only 10 last active elements of current year.

--- a/src/components/StatsBottom/styles.scss
+++ b/src/components/StatsBottom/styles.scss
@@ -23,4 +23,19 @@
   height: 180px;
   margin-top: 40px;
   padding: 20px 80px;
+  @media screen and (max-width: 825px) {
+    padding: 20px 40px;
+  }
+  @media screen and (max-width: 550px) {
+    padding: 20px 20px;
+  }
+}
+
+.stats-bottom__info {
+  position: absolute;
+  top: 10px;
+  left: 20px;
+  color: grey;
+  font-size: 12px;
+  letter-spacing: -0.3px;
 }
